CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (MoNS)
SET (APPLICATION_NAME "Modular nbody solver")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2016")
SET (APPLICATION_VERSION_MAJOR 0)
SET (APPLICATION_VERSION_MINOR 1)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE ALPHA)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "de.robihei")
SET (APPLICATION_VENDOR_NAME "Robin Heinemann")
SET (APPLICATION_VENDOR_URL "none (yet)")
SET (APPLICATION_VENDOR_EMAIL "robin.ole.heinemann@t-online.de")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
#SET (CXX_WARNINGS "-Wall -pedantic -Wextra -Wno-unused-parameter -Wno-unused-variable -Wno-unused-function -Wno-unknown-pragmas -ggdb -march=native -fno-math-errno -ffinite-math-only -ffast-math")
SET (CXX_WARNINGS "-Wall -pedantic -Wextra -Wno-unused-parameter -Wno-unused-variable -Wno-unused-function -Wno-unknown-pragmas -ggdb -march=native")

IF (CMAKE_CXX_COMPILER MATCHES "icpc")
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-intel") 
ENDIF()

IF (CMAKE_C_COMPILER MATCHES "icc")
	SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-intel") 
ENDIF()

#SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -flto -fgraphite-identity -floop-interchange -floop-strip-mine -floop-block -floop-parallelize-all -ftree-loop-distribution")
#SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto -fwhole-program")
#SET (CMAKE_AR "gcc-ar")
#SET (CMAKE_CXX_ARCHIVE_CREATE "<CMAKE_AR> qcs <TARGET> <LINK_FLAGS> <OBJECTS>")
#SET (CMAKE_CXX_ARCHIVE_FINISH true)

SET (CMAKE_VERBOSE_MAKEFILE 0)
SET (BUILD_SHARED_LIBS false)
set (CMAKE_CXX_STANDARD 14)

SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")

SET( CMAKE_POSITION_INDEPENDENT_CODE ON )

LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")

INCLUDE_DIRECTORIES("${MAINFOLDER}/include")

FILE (GLOB_RECURSE CONFIGINPUTS1 include/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS2 include/*.h.in.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS3 src/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS4 src/*.h.in.cmake)

LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS4}")

FOREACH (CONFIGINPUT ${CONFIGINPUTS})
  STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
  STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
  CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})

FIND_PACKAGE(Threads REQUIRED)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
  INSTALL(DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}" DESTINATION "include")
ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")

