PROJECT(libplot)
FILE (GLOB_RECURSE libplot_SRCS *.cpp *.cxx *.cc *.C *.c)

#FIND_PACKAGE(SFML COMPONENTS system window graphics)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

SET (libplot_BIN "plot")
SET (libplot_LIBS ${SFML_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} Threads::Threads sfml-system sfml-window sfml-graphics)

ADD_LIBRARY(${libplot_BIN} ${libplot_SRCS} glyphs.o)

TARGET_INCLUDE_DIRECTORIES(${libplot_BIN} PRIVATE ${OPENGL_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${libplot_BIN} PRIVATE ${GLEW_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${libplot_BIN} PUBLIC .)

TARGET_LINK_LIBRARIES(${libplot_BIN} ${libplot_LIBS})

SET_TARGET_PROPERTIES(${libplot_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${libplot_BIN} CLEAN_DIRECT_OUTPUT 1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_WARNINGS}")

INSTALL(TARGETS ${libplot_BIN} DESTINATION bin)
