PROJECT(libreadline)
FILE (GLOB_RECURSE libreadline_SRCS *.cpp *.cxx *.cc *.C *.c)

SET (libreadline_BIN "readline")

ADD_LIBRARY(${libreadline_BIN} INTERFACE)

#TARGET_LINK_LIBRARIES(${libreadline_BIN} ${libreadline_LIBS})
TARGET_INCLUDE_DIRECTORIES(${libreadline_BIN} INTERFACE ".")

#SET_TARGET_PROPERTIES(${libreadline_BIN} PROPERTIES VERSION	"${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${libreadline_BIN} CLEAN_DIRECT_OUTPUT 1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_WARNINGS}")

INSTALL(TARGETS ${libreadline_BIN} DESTINATION bin)
