PROJECT(libcore)
FILE (GLOB_RECURSE libcore_SRCS *.cpp *.cxx *.cc *.C *.c)

SET (libcore_LIBS fmt)
SET (libcore_BIN "core")

ADD_LIBRARY(${libcore_BIN} ${libcore_SRCS})
TARGET_LINK_LIBRARIES(${libcore_BIN} ${libcore_LIBS})
TARGET_INCLUDE_DIRECTORIES(${libcore_BIN} PUBLIC ".")

SET_TARGET_PROPERTIES(${libcore_BIN} PROPERTIES VERSION	"${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${libcore_BIN} CLEAN_DIRECT_OUTPUT 1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_WARNINGS}")

INSTALL(TARGETS ${libcore_BIN} DESTINATION bin)
