PROJECT(libcsv)
FILE (GLOB_RECURSE libcsv_SRCS *.cpp *.cxx *.cc *.C *.c)

SET (libcsv_LIBS core)
SET (libcsv_BIN "csv")

ADD_LIBRARY(${libcsv_BIN} ${libcsv_SRCS})
TARGET_LINK_LIBRARIES(${libcsv_BIN} ${libcsv_LIBS})
TARGET_INCLUDE_DIRECTORIES(${libcsv_BIN} PUBLIC ".")

SET_TARGET_PROPERTIES(${libcsv_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${libcsv_BIN} CLEAN_DIRECT_OUTPUT 1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_WARNINGS}")

INSTALL(TARGETS ${libcsv_BIN} DESTINATION bin)
